Fixed Scrollbar overlay

--- a/style.css
+++ b/style.css
@@ -695,6 +695,7 @@ body {
 }
 .scroll-bar:hover {
   overflow-y: auto;
+  overflow-y: overlay;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
